Bug 285508 - subject line is always spell checked with default dictionary
Summary: subject line is always spell checked with default dictionary
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.7
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-01 20:14 UTC by Gerhard
Modified: 2011-11-03 16:24 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments
Screenshot of the composer windows checking with the wrong dictionary (70.37 KB, image/png)
2011-11-01 20:15 UTC, Gerhard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard 2011-11-01 20:14:15 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

The subject line of a mail seems to be always checked in the language which is set as default for the identity. My system is default in German, but I've configured Kmail so that I can choose the dictionary when creating a mail (see attachment). However, the subject line is always checked for German. 
English dictionary is correctly applied to the message text.

Reproducible: Always

Steps to Reproduce:
1. set default language for the e-mail identity (may also be the global KDE language, I'm not sure) to i.e. German (I call it primary language)
2. configure the mail editor so that the dictionary can be selected
3. set it to another language, i.e. English (secondary language)
4. enter text in the subject line and the message in the selected language (secondary)

Actual Results:  
the secondary language text in the subject line is highlighted by the spell checker as wrong. The attachment shows that the spell checker still checks for the primary language.

Expected Results:  
The subject line text should be checked according to the selected dictionary, in the example English.
Comment 1 Gerhard 2011-11-01 20:15:22 UTC
Created attachment 65130 [details]
Screenshot of the composer windows checking with the wrong dictionary
Comment 2 Laurent Montel 2011-11-02 08:54:33 UTC
I confirm this bug
Comment 3 Laurent Montel 2011-11-03 16:24:09 UTC
Git commit 0cfefa2547910e1d8c04b0f54c211f08025a66fc by Montel Laurent.
Committed on 03/11/2011 at 17:23.
Pushed by mlaurent into branch 'master'.

Fix Bug 285508 - subject line is always spell checked with default dictionary

FIXED-IN: 4.7.4
BUG: 285508

M  +4    -0    messagecomposer/kmsubjectlineedit.cpp

http://commits.kde.org/kdepim/0cfefa2547910e1d8c04b0f54c211f08025a66fc
Comment 4 Laurent Montel 2011-11-03 16:24:44 UTC
Git commit 8db3acbfa953e543e5918eab6762b13beacf06a5 by Montel Laurent.
Committed on 03/11/2011 at 17:23.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 285508 - subject line is always spell checked with default dictionary

FIXED-IN: 4.7.4
BUG: 285508
(cherry picked from commit 0cfefa2547910e1d8c04b0f54c211f08025a66fc)

M  +4    -0    messagecomposer/kmsubjectlineedit.cpp

http://commits.kde.org/kdepim/8db3acbfa953e543e5918eab6762b13beacf06a5