Fix Bug 285508 - subject line is always spell checked with default dictionary

FIXED-IN: 4.7.4
BUG: 285508
(cherry picked from commit 0cfefa2547910e1d8c04b0f54c211f08025a66fc)